[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lynch-library"
version = "0.1.0"
description = "Catalog information about Lynch syndrome"
authors = [
    {name = "Lynch Library", email = "noreply@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django",
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "actionlint-py",
    "cookiecutter",
    "django-upgrade",
    "djlint",
    "factory-boy",
    "pre-commit",
    "pre-commit-hooks",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "ruff",
    "shellcheck-py",
    "typos",
    "validate-pyproject",
    "yamllint",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov --cov-report=term-missing:skip-covered"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/tests/*",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
